# fluxaa

./: .gitignore  README.md  pyproject.toml
configs/: example_local.yaml  galamo_tf_local.yaml
examples/: galamo_train_tf.py  train_example.py  train_pytorch_example.py
fluxaa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
orchestrator/: cli.py  runner.py
runs/: run_20251122T230239681932.json  run_20251122T230335329148.json  run_20251122T230441213368.json  run_20251122T230721863303.json  run_20251122T233116885239.json  run_20251122T233131178505.json  run_20251122T233148094547.json  run_20251122T235405940109.json  run_20251123T001351221449.json
